Merge SubscriptionTokenLister with SubscriptionDbRepository (#1411)
Fix the problem with using listing token and restricting to readers at the
same time.

Internal ticket: 1107